Fixed text clipping in table cells

--- a/src/assets/css/square.scss
+++ b/src/assets/css/square.scss
@@ -8,6 +8,7 @@
 	color: black;
 	font-size: 10pt;
 	padding: 5px;
+	word-break: break-word;
 }
 
 .square.active {
